--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,11 @@ paginate: 5
 navigation:
  - title: Home
    url: /index.html
+ - title: Contact
+   url: /contact
 
 social:
    github: markwoon
    twitter: mark_woon
-   email: markwoon@gmail.com
 
 #google_analytics: "UA-xxx-1"
